Fix sidebar height and overflow-y

--- a/src/sidebar.styl
+++ b/src/sidebar.styl
@@ -27,7 +27,8 @@
     &.hidden
       display none
   .content
-    overflow-y scroll
+    overflow-y auto
+    height 100%
     width 100%
     padding 1.03rem 1.32rem
     flex 1
